...
                UIApplication.shared.sendAction(#selector(UIResponder.resignFirstResponder),
                                                to: nil,
                                                from: nil,
                                                for: nil)
            }
            .padding(.bottom, 5)
            .accessibility(identifier: "chatTable")
            VStack {
                Divider()
                HStack {
                    TextField("Message...", text: $composedMessage,
                              onCommit: {
                                  print("tick")
                                  sendMessage()
                                  // self.firstResponder = "TF1"
                              })
                        .multilineTextAlignment(.leading)
...
